[metadata]
name = simpledmx-dkgaraujo
version = attr: simpledmx.__version__
author = Douglas K. G. de Araujo
description = A minimalistic user experience with SDMX that fetches all data from sources
long_description = file: README.me
long_description_content_type = text/markdown
url = https://github.com/dkgaraujo/simpledmx
project_urls =
    Bug Tracker = https://github.com/dkgaraujo/simpledmx/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache 2.0
    Operating System :: OS Independent
    
[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.10.2

[options.packages.find]
where = src
