[metadata]
name = simpledmx
version = attr: simpledmx.__version__
author = Douglas K. G. de Araujo
author_email = dkg.araujo@gmail.com
description = A minimalistic user experience with SDMX that fetches all data from sources
long_description = file: README.me
long_description_content_type = text/markdown
license = Apache License 2.0
url = https://github.com/dkgaraujo/simpledmx
project_urls =
    Bug Tracker = https://github.com/dkgaraujo/simpledmx/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    
[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.7.12
install_requires =
    pandas>=1.3.5
    pandasdmx>=1.8.0
    requests-cache>=0.9.1
    scikeras>=0.4.1
    scikit-learn>=1.0.2
    tqdm>=4.62.3
[options.packages.find]
where = src
